# Project228

./: .gitignore  .swp  CMakeLists.txt  ClassesCharacteristics  Project7.sln  README.md  Source.cpp  Tasks  Tasks.md  Troubles  attack.cpp  attack.h  constants.h  control.txt  draw.h  functions.h  main_headers.h  player.cpp  player.h  quest_hero.cpp  quest_hero.h  useful.h
Debug/: Project7.ilk
Project228/: CMakeLists.txt  constants.h  functions.h  main.cpp  main_headers.h  player.cpp  player.h
Project7/: Project7.vcxproj  Project7.vcxproj.filters  Source.cpp  attack.cpp  attack.h  bullet.cpp  bullet.h  constants.h  draw.h  enemy.cpp  enemy.h  functions.h  main_headers.h  menu.h  player.cpp  player.h  quest_hero.cpp  quest_hero.h  rururu.vcxproj  rururu.vcxproj.filters  useful.h
Project7/Debug/: vc141.idb
Project7/Debug/Project7.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project7.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project7/Release/Project7.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project7.lastbuildstate  Project7.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project7/files/: main_map.txt  musicnames.txt  sprite coordinates.txt
Project7/files/enemy/1/: main.txt
Project7/files/enemy/10/: main.txt
Project7/x64/Debug/: vc141.idb
Release/: Project7.iobj  Project7.ipdb
sprites/: README.md  sprite-sheet coor.txt
src/: Project228.pro  Project228.pro.user.qiCgCY  README.md  herosprite.cpp  herosprite.cpp.autosave  main.cpp  mainwindow.cpp  player.cpp
src/headers/: herosprite.h  mainwindow.h  player.h
x64/Debug/: Project7.ilk
x64/Release/: Project7.iobj  Project7.ipdb
(+61 files in other folders)
